Made navbar absolute to top of page, fixed banner image to stretch across screen, styled content

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -78,7 +78,10 @@
   }
 
 /* Front Page */
-
+.frontpage-image {
+  width: 100vw;
+  height: 60vh;
+}
 /* Login Page */
 
 /* Account Page */
